style: adjust hover background color

--- a/packages/sage-assets/lib/stylesheets/components/_copy_text.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_copy_text.scss
@@ -76,7 +76,7 @@ $-copy-text-color-hover: var(--pine-color-text-secondary-hover);
   }
 
   &:hover {
-    background-color: var(--pine-color-grey-200);
+    background-color: inherit;
   }
 
   &:hover::before {
