style: correct padding css

--- a/packages/sage-assets/lib/stylesheets/components/_form_select.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_form_select.scss
@@ -86,10 +86,8 @@ $-select-arrow-position-inverse-with-message: calc(100% - 36px);
   grid-area: field;
   position: relative;
   height: $-select-height;
-  padding-left: var(--pine-dimension-sm);
-  padding-right: calc(var(--pine-dimension-sm) + var(--pine-dimension-md) + var(--pine-dimension-3xs));
-  padding-top: 0;
-  padding-bottom: 0;
+  padding-block: 0;
+  padding-inline: $-select-padding-x  calc($-select-padding-x + $-select-arrow-icon-width + rem(4px));
   outline: none;
   transition: border map-get($sage-transitions, default);
   cursor: pointer;
