style: adjust input height variable

--- a/packages/sage-assets/lib/stylesheets/components/_form_input.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_form_input.scss
@@ -6,7 +6,7 @@
 
 
 $-input-border-width: rem(1px);
-$-input-height: var(--pine-dimension-450);
+$-input-height: var(--pine-dimension-xl);
 $-input-label-offset: var(--pine-dimension-150);
 $-input-padding-offset: var(--pine-dimension-md) - $-input-border-width;
 $-input-popover-size: var(--pine-dimension-xl);
