fix: correct icons for select dropdown

--- a/docs/lib/sage_rails/app/views/sage_components/_sage_dropdown_trigger.html.erb
+++ b/docs/lib/sage_rails/app/views/sage_components/_sage_dropdown_trigger.html.erb
@@ -17,7 +17,7 @@
       raised: false,
       value: component.value.present? ? component.value : "",
       css_classes: "sage-dropdown__trigger-selected-value",
-      icon: { style: "right", name: "caret-down" }
+      icon: { style: "right", name: "enlarge" }
     } %>
     <label class="sage-dropdown__trigger-label">
       <%= component.label %>
