--- a/packages/sage-assets/lib/stylesheets/components/_button.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_button.scss
@@ -786,6 +786,7 @@ a.sage-btn {
     &:not(:focus):hover,
     &:not(:focus):hover::after {
       background-color: transparent;
+      border-color: transparent;
     }
   }
 }
