docs: add link to danger preview

--- a/docs/app/views/examples/components/banner/_preview.html.erb
+++ b/docs/app/views/examples/components/banner/_preview.html.erb
@@ -52,6 +52,13 @@
   dismissable: false,
   type: "danger",
   text: "It's over, Anakin. I have the high ground.",
+  link: {
+    name: "Link here",
+    attributes: {
+      href: "#",
+      referer: "no-referer"
+    }
+  }
 } %>
 
 <h3 class="t-sage-heading-6">Default fixed (Ladera top context)</h3>
